--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,160 +1,216 @@
 {{ define "main" }}
 <div class="container" role="main">
-  <div class="row">
-    <div class="col-lg-8 offset-lg-2 col-md-10 offset-md-1 ">
-
-      <div class="card-image card-image-blog p-0">
-        {{ if .Params.image }}
-        <img src="{{ .Params.image }}" alt="{{ .Title }}" class="card-img-top img-fluid">
-        {{ end }}
-        {{ if .Params.video }}
-        <video loop autoplay muted playsinline class="img-title">
-          <source src="{{ .Params.video }}">
-        </video>
-        {{ end }}
-      </div>
-    </div>
- 
-    <div class="col-lg-8 offset-lg-2 col-md-10 offset-md-1 pt-4">
-      <article role="main" class="blog-post">
-        {{ .Content }}
-      </article>
-    </div>
-  </div>
-
-  <div class="row">
-    <div class="col-lg-8 offset-lg-2 col-md-10 offset-md-1">
-      <hr />
-    </div>
-    <div class="col-lg-8 offset-lg-2 col-md-10 offset-md-1 pt-2">
-        {{ if .Params.tags }}
-          <div class="blog-tags">
-            {{ range .Params.tags }}
-              <a href="{{ $.Site.LanguagePrefix | absURL }}/tags/{{ . | urlize }}/">{{ . }}</a>
-            {{ end }}
+    <div class="modal fade" tabindex="-1" aria-labelledby="view shop photo" aria-hidden="true" id="modal-view-photo" role="dialog">
+      <div class="modal-dialog modal-xl">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
           </div>
-        {{ end }}
-      </div>
- 
-    <div class="col-lg-8 offset-lg-2 col-md-10 offset-md-1 pt-4">
-      {{ if $.Param "socialShare" }}
-      <section id="social-share">
-        <div class="list-inline footer-links">
-          {{ partial "share-links" . }}
-        </div>
-      </section>
-      {{ end }}
-    </div>
+          <div class="modal-body">
+            <div class="carousel slide" id="carousel-view" data-bs-ride="carousel">
 
-    <div class="col-lg-8 offset-lg-2 col-md-10 offset-md-1 mt-3">
-      <div class="card">
-        <div class="row no-gutters">
-          <div class="col-md-2 "> 
-            <div class="card-body ">
-            <img src="{{ "/img/bino-about-small.jpg" }}" class="img-responsive img-50 img-round" alt="">
-          </div>
-          </div>
-          <div class="col-md-10">
-            <div class="card-body p-1.1">
-
-              <p class="p-0 m-0"><small class="text-muted ">Written By</small></p>
-              <h5>
-                {{ if not .Site.Params.hideAuthor }}
-                {{ if .Params.author }}
-                {{ .Params.author | safeHTML }}
-                {{ else }}
-                {{ .Site.Author.name | safeHTML }}
-                {{ end }}
-                {{ end }}
-              </h5>
-              <p class="card-text fs-1"></p>
+            <div class="carousel-inner">
+              <div class="carousel-item active"><img src="{{ .Params.image }}" class="d-block w-100" alt=""></div>
+          {{ range .Params.images}}
+              <div class="carousel-item"><img class="d-block w-100" src="{{ . }}" alt=""></div>
+          {{ end }}
+            </div>
+            <button class="carousel-control-prev" role="button" data-bs-slide="prev" data-bs-target="#carousel-view">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" role="button" data-bs-slide="next" data-bs-target="#carousel-view">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
             </div>
           </div>
         </div>
-
-      
-    </div>
-  </div>
-
-      <div class="col-lg-8 offset-lg-2 col-md-10 offset-md-1 pt-4">
-        {{ if ne .Type "page" }}
-        <ul class="list-group list-group-horizontal" style="flex-direction: row">
-          {{ if .PrevInSection }}
-          <li class="list-group-item b-0">
-
-            <a type="button" class="btn btn-dark" role="button" href="{{ .PrevInSection.Permalink }}"
-              data-toggle="tooltip" data-placement="top" title="{{ .PrevInSection.Title }}">&larr;
-              {{ i18n "previousPost" }}</a>
-          </li>
-          {{ end }}
-
-
-          {{ if .NextInSection }}
-          <li class="list-group-item ms-auto b-0">
-            <a type="button" class="btn btn-dark" role="button" href="{{ .NextInSection.Permalink }}"
-              data-toggle="tooltip" data-placement="top" title="{{ .NextInSection.Title }}">{{ i18n "nextPost" }}
-              &rarr;</a>
-          </li>
-          {{ end }}
-        </ul>
-        {{ end }}
-      </div>
-
-      <div class="col-lg-8 offset-lg-2 col-md-10 offset-md-1 pt-4"> 
       </div>
     </div>
-  </div>
-
-  <div class="">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-12 col-md-12 mt-3">
-          <h3>Read more</h3>
-          <hr />
+  <!-- Product section-->
+  <section class="py-5">
+    <div class="container px-4 px-lg-5 my-5">
+      <div class="row gx-4 gx-lg-5 align-items-center">
+        <div class="col-md-6" href="#modal-view-photo" data-bs-toggle="modal"><img class="mb-5 mb-md-0 img-thumbnail" src="{{ .Params.image }}" alt="..." /></div>
+        <div class="col-md-6">
+          <div class="small mb-1">SKU: BST-498</div>
+          <h1 class="display-5 fw-bolder">{{ .Params.title }}</h1>
+          <div class="fs-5 mb-5">
+            <span class="text-decoration-line-through">${{ .Params.price }}</span>
+            <span>${{ .Params.discount }}</span>
+          </div>
+          <p class="lead">{{ .Params.Description }}</p>
+          <div class="d-flex">
+            <button class="btn btn-outline-dark flex-shrink-0" type="button">
+              <i class="bi-cart-fill me-1"></i>
+              Add to cart
+            </button>
+          </div>
         </div>
-
-        {{ if .Site.Params.showRelatedPosts }}
-        {{ range first 1 (where (where .Site.Pages ".Params.tags" "intersect" .Params.tags) "Permalink" "!=" .Permalink) }}
-        {{ $.Scratch.Set "has_related" true }}
-        {{ end }}
-
-        {{ if $.Scratch.Get "has_related" }}
- 
-        {{ $num_to_show := .Site.Params.related_content_limit | default 3 }}
-        {{ range first $num_to_show (where (where .Site.Pages ".Params.tags" "intersect" .Params.tags) "Permalink" "!=" .Permalink) }}
-         
-        {{ partial "post_preview.html" .}}
-        {{ end }} 
-
-        {{ end }}
-        {{ end }}
       </div>
     </div>
 
-    {{ if (.Params.comments) | or (and (or (not (isset .Params "comments")) (eq .Params.comments nil)) (and .Site.Params.comments (ne .Type "page"))) }}
-    {{ if .Site.DisqusShortname }}
-    {{ if .Site.Params.delayDisqus }}
-    <div class="disqus-comments">
-      <button id="show-comments" class="btn btn-default" type="button">{{ i18n "show" }} <span
-          class="disqus-comment-count" data-disqus-url="{{ trim .Permalink "/" }}">{{ i18n "comments" }}</span></button>
-      <div id="disqus_thread"></div>
 
-      <script type="text/javascript">
-        var disqus_config = function () {
-          this.page.url = '{{ trim .Permalink "/" }}';
-        };
-
-      </script>
+    <div class="container px-4 px-lg-5 mt-5">
+      <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4">
+        {{ range .Params.images}}
+        {{ partial "image_preview.html" .}}
+        {{ end }}
+      </div>
     </div>
-    {{ else }}
-    <div class="disqus-comments">
-      {{ template "_internal/disqus.html" . }}
-    </div>
-    {{ end }}
-    {{ end }}
-    {{ end }}
+    <div class="container px-4 px-lg-5 my-5">
+      {{ if ne .Type "page" }}
+      <ul class="list-group list-group-horizontal" style="flex-direction: row">
+        {{ if .PrevInSection }}
+        <li class="list-group-item b-0">
 
-  </div>
-</div>
+          <a type="button" class="btn btn-dark" role="button" href="{{ .PrevInSection.Permalink }}"
+            data-toggle="tooltip" data-placement="top" title="{{ .PrevInSection.Title }}">&larr;
+            {{ i18n "previousPost" }}</a>
+        </li>
+        {{ end }}
+
+
+        {{ if .NextInSection }}
+        <li class="list-group-item ms-auto b-0">
+          <a type="button" class="btn btn-dark" role="button" href="{{ .NextInSection.Permalink }}"
+            data-toggle="tooltip" data-placement="top" title="{{ .NextInSection.Title }}">{{ i18n "nextPost" }}
+            &rarr;</a>
+        </li>
+        {{ end }}
+      </ul>
+      {{ end }}
+    </div>
+    <div class="container px-4 px-lg-5 my-5">
+            <hr />
+          </div>
+    <div class="container px-4 px-lg-5 my-5">
+            {{ if .Params.tags }}
+            <div class="blog-tags">
+              {{ range .Params.tags }}
+              <a href="{{ $.Site.LanguagePrefix | absURL }}/tags/{{ . | urlize }}/">{{ . }}</a>
+              {{ end }}
+            </div>
+            {{ end }}
+          </div>
+    <div class="container px-4 px-lg-5 my-5">
+            {{ if $.Param "socialShare" }}
+            <section id="social-share">
+              <div class="list-inline footer-links">
+                {{ partial "share-links" . }}
+              </div>
+            </section>
+            {{ end }}
+          </div>
+
+  </section>
+  <!-- Related items section-->
+  <section class="py-5 bg-light">
+    <div class="container px-4 px-lg-5 mt-5">
+      <h2 class="fw-bolder mb-4">Related products</h2>
+      <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
+        <div class="col mb-5">
+          <div class="card h-100">
+            <!-- Product image-->
+            <img class="card-img-top" src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg" alt="..." />
+            <!-- Product details-->
+            <div class="card-body p-4">
+              <div class="text-center">
+                <!-- Product name-->
+                <h5 class="fw-bolder">Fancy Product</h5>
+                <!-- Product price-->
+                $40.00 - $80.00
+              </div>
+            </div>
+            <!-- Product actions-->
+            <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+              <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">View options</a></div>
+            </div>
+          </div>
+        </div>
+        <div class="col mb-5">
+          <div class="card h-100">
+            <!-- Sale badge-->
+            <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Sale</div>
+            <!-- Product image-->
+            <img class="card-img-top" src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg" alt="..." />
+            <!-- Product details-->
+            <div class="card-body p-4">
+              <div class="text-center">
+                <!-- Product name-->
+                <h5 class="fw-bolder">Special Item</h5>
+                <!-- Product reviews-->
+                <div class="d-flex justify-content-center small text-warning mb-2">
+                  <div class="bi-star-fill"></div>
+                  <div class="bi-star-fill"></div>
+                  <div class="bi-star-fill"></div>
+                  <div class="bi-star-fill"></div>
+                  <div class="bi-star-fill"></div>
+                </div>
+                <!-- Product price-->
+                <span class="text-muted text-decoration-line-through">$20.00</span>
+                $18.00
+              </div>
+            </div>
+            <!-- Product actions-->
+            <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+              <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Add to cart</a></div>
+            </div>
+          </div>
+        </div>
+        <div class="col mb-5">
+          <div class="card h-100">
+            <!-- Sale badge-->
+            <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Sale</div>
+            <!-- Product image-->
+            <img class="card-img-top" src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg" alt="..." />
+            <!-- Product details-->
+            <div class="card-body p-4">
+              <div class="text-center">
+                <!-- Product name-->
+                <h5 class="fw-bolder">Sale Item</h5>
+                <!-- Product price-->
+                <span class="text-muted text-decoration-line-through">$50.00</span>
+                $25.00
+              </div>
+            </div>
+            <!-- Product actions-->
+            <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+              <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Add to cart</a></div>
+            </div>
+          </div>
+        </div>
+        <div class="col mb-5">
+          <div class="card h-100">
+            <!-- Product image-->
+            <img class="card-img-top" src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg" alt="..." />
+            <!-- Product details-->
+            <div class="card-body p-4">
+              <div class="text-center">
+                <!-- Product name-->
+                <h5 class="fw-bolder">Popular Item</h5>
+                <!-- Product reviews-->
+                <div class="d-flex justify-content-center small text-warning mb-2">
+                  <div class="bi-star-fill"></div>
+                  <div class="bi-star-fill"></div>
+                  <div class="bi-star-fill"></div>
+                  <div class="bi-star-fill"></div>
+                  <div class="bi-star-fill"></div>
+                </div>
+                <!-- Product price-->
+                $40.00
+              </div>
+            </div>
+            <!-- Product actions-->
+            <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+              <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Add to cart</a></div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
 </div>
 {{ end }}
