--- a/layouts/partials/album_preview.html
+++ b/layouts/partials/album_preview.html
@@ -13,7 +13,12 @@
     </div>
 
     <!-- Body -->
-    <div class="card-body py-2"><a class="product-meta d-block fs-xs pb-1" href="#">Women’s T-shirt</a>
+    <div class="card-body py-2">
+      <div class="post-entry">
+      {{ .Params.title }}
+      </div>
+      <!-- 
+
       <h3 class="product-title fs-sm"><a href="shop-single-v1.html">Cotton Lace Blouse</a></h3>
       <div class="d-flex justify-content-between">
         <div class="product-price"><span class="text-accent">$28.<small>50</small></span>
@@ -23,6 +28,7 @@
           <i class="bi-cart-fill me-1"></i>
         </div>
       </div>
+      -->
     </div>
 
   </div>
