--- a/layouts/partials/image_preview.html
+++ b/layouts/partials/image_preview.html
@@ -1,7 +1,9 @@
-        <div class="col mb-5">
-          <div class="card h-100">
-        <a href="{{ . }}">
-            <img class="card-img-top" src="{{ . }}" alt="..." />
-        </a>
-    </div>
-</div> 
+<div class="col mb-5">
+  <div class="card h-100">
+    <a href="{{ . }}">
+      <div class="album-img-box">
+      <img class="card-img-top" src="{{ . }}" alt="..." />
+      </div>
+    </a>
+  </div>
+</div>
