--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,19 +1,20 @@
 {{ define "main" }}
 <div class="container" role="main">
-    <div class="modal fade" tabindex="-1" aria-labelledby="view shop photo" aria-hidden="true" id="modal-view-photo" role="dialog">
-      <div class="modal-dialog modal-xl">
-        <div class="modal-content">
-          <div class="modal-header">
-            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-          </div>
-          <div class="modal-body">
-            <div class="carousel slide" id="carousel-view" data-bs-ride="carousel">
+  <div class="modal fade" tabindex="-1" aria-labelledby="view shop photo" aria-hidden="true" id="modal-view-photo"
+    role="dialog">
+    <div class="modal-dialog modal-xl">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <div class="carousel slide" id="carousel-view" data-bs-ride="carousel">
 
             <div class="carousel-inner">
               <div class="carousel-item active"><img src="{{ .Params.image }}" class="d-block w-100" alt=""></div>
-          {{ range .Params.images}}
+              {{ range .Params.images}}
               <div class="carousel-item"><img class="d-block w-100" src="{{ . }}" alt=""></div>
-          {{ end }}
+              {{ end }}
             </div>
             <button class="carousel-control-prev" role="button" data-bs-slide="prev" data-bs-target="#carousel-view">
               <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -23,18 +24,19 @@
               <span class="carousel-control-next-icon" aria-hidden="true"></span>
               <span class="visually-hidden">Next</span>
             </button>
-            </div>
           </div>
         </div>
       </div>
     </div>
+  </div>
   <!-- Product section-->
   <section class="py-5">
     <div class="container px-4 px-lg-5 my-5">
       <div class="row gx-4 gx-lg-5 align-items-center">
-        <div class="col-md-6" href="#modal-view-photo" data-bs-toggle="modal"><img class="mb-5 mb-md-0 img-thumbnail" src="{{ .Params.image }}" alt="..." /></div>
+        <div class="col-md-6" href="#modal-view-photo" data-bs-toggle="modal"><img class="mb-5 mb-md-0 img-thumbnail"
+            src="{{ .Params.image }}" alt="..." /></div>
         <div class="col-md-6">
-          <div class="small mb-1">SKU: BST-498</div>
+          <div class="small mb-1">SKU: {{ .Params.id }}</div>
           <h1 class="display-5 fw-bolder">{{ .Params.title }}</h1>
           <div class="fs-5 mb-5">
             <span class="text-decoration-line-through">${{ .Params.price }}</span>
@@ -51,7 +53,6 @@
       </div>
     </div>
 
-
     <div class="container px-4 px-lg-5 mt-5">
       <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4">
         {{ range .Params.images}}
@@ -59,6 +60,7 @@
         {{ end }}
       </div>
     </div>
+
     <div class="container px-4 px-lg-5 my-5">
       {{ if ne .Type "page" }}
       <ul class="list-group list-group-horizontal" style="flex-direction: row">
@@ -83,26 +85,27 @@
       {{ end }}
     </div>
     <div class="container px-4 px-lg-5 my-5">
-            <hr />
-          </div>
+      <hr />
+    </div>
     <div class="container px-4 px-lg-5 my-5">
-            {{ if .Params.tags }}
-            <div class="blog-tags">
-              {{ range .Params.tags }}
-              <a href="{{ $.Site.LanguagePrefix | absURL }}/tags/{{ . | urlize }}/">{{ . }}</a>
-              {{ end }}
-            </div>
-            {{ end }}
-          </div>
+      {{ if .Params.tags }}
+      <div class="blog-tags">
+        {{ range .Params.tags }}
+        <a href="{{ $.Site.LanguagePrefix | absURL }}/tags/{{ . | urlize }}/">{{ . }}</a>
+        {{ end }}
+      </div>
+      {{ end }}
+    </div>
     <div class="container px-4 px-lg-5 my-5">
-            {{ if $.Param "socialShare" }}
-            <section id="social-share">
-              <div class="list-inline footer-links">
-                {{ partial "share-links" . }}
-              </div>
-            </section>
-            {{ end }}
-          </div>
+      {{ if $.Param "socialShare" }}
+      <section id="social-share">
+        <div class="list-inline footer-links">
+          {{ partial "share-links" . }}
+        </div>
+      </section>
+      {{ end }}
+    </div>
+<!--
 
   </section>
   <!-- Related items section-->
