--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -60,6 +60,7 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
 {{- end }}
 <link rel="stylesheet" href="{{ "css/main.css" | absURL }}">
+<link rel="stylesheet" href="{{ "css/site.css" | absURL }}">
 <link disabled id="dark-mode-theme" rel="stylesheet" href="{{ "css/dark.css" | absURL }}">
 
 {{- if .Site.Params.useHLJS }}
